rewrite the parent pom to not at this point depend on m2e-parent